Add login & registration function with cookies
* Add JWT to save user data
* Add mockup dashboard to check cookie functions

--- a/server/config.env
+++ b/server/config.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://salehiharun:baVCVSadhDjvjTkw@cluster0.ungfeal.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=42389749234 
