Add mongoose connection to backend
Since SQL databases for data persistence also benefit from for scalability
we decided to use the MongoDB. MongoDB is especially suited for small
web dev projects.

--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,3 @@
-MONGO_URL=mongodb+srv://salehiharun:baVCVSadhDjvjTkw@cluster0.ungfeal.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=42389749234 
+MONGO_URL=mongodb://localhost/cyberia
+
+mongodb+srv://salehiharun:baVCVSadhDjvjTkw@cluster0.ungfeal.mongodb.net/cyberia?retryWrites=true&w=majority&appName=Cluster0
