Finish signin page
The user needs to login to the page. Therefore a signin page is needed.
Furthermore, a MongoDB database has been created to test out the backend
logic with real data.

--- a/server/config.env
+++ b/server/config.env
@@ -1,3 +1,4 @@
 MONGO_URL=mongodb://localhost/cyberia
+JWT_SECRET=982j3klj3f8jf923
 
 mongodb+srv://salehiharun:baVCVSadhDjvjTkw@cluster0.ungfeal.mongodb.net/cyberia?retryWrites=true&w=majority&appName=Cluster0
