--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,9 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
-    "react-hot-toast": "^2.4.1",
     "react-router-bootstrap": "^0.26.3",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
