Add deployment to fly.io
Customers should be able to reach the website via the internet.
Therefore fly.io is used as a PaaS for the Cyberia website.

--- a/server/config.env
+++ b/server/config.env
@@ -1,4 +1,3 @@
-MONGO_URL=mongodb://localhost/cyberia
+MONGO_URL_ATLAS=mongodb+srv://salehiharun:baVCVSadhDjvjTkw@cluster0.ungfeal.mongodb.net/cyberia?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=982j3klj3f8jf923
-
-mongodb+srv://salehiharun:baVCVSadhDjvjTkw@cluster0.ungfeal.mongodb.net/cyberia?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL_LOCAL=mongodb://localhost/cyberia
